# authdrift

./: .gitignore  .semgrepignore  HANDOFF.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/authdrift/: __init__.py  cli.py
src/authdrift/rules/: oauth-email-key-extended.yaml  oauth-email-key.yaml
tests/fixtures/: authlib-vulnerable.py  edge-syntax-error.js  firebase-vulnerable.js  lucia-vulnerable.js  nextauth-db-prefix-email.ts  nextauth-findFirst-email.ts  nextauth-vulnerable.ts  passport-create-email-key.js  passport-safe.js  passport-vulnerable.js  python-filter-email.py  python-sqlalchemy-email.py  python-vulnerable.py  safe-authlib-sub-keyed.py  safe-contact-form.js  safe-email-display-only.js  safe-email-in-comments.js  safe-firebase-uid.js  safe-lucia-provider-id.js  safe-marketing-signup.js  safe-nextauth-providerAccountId.ts  safe-password-reset.js  safe-python-sub-keyed.py
